# constraint-guidance

./: .gitignore  extract_maps.py  main.py  optimization.py  pyproject.toml
ael/: agent_obstacle_score.py  agent_obstacle_score_debug.py  cbs_spatial_approximation.py  constraint_evaluation.py  debug_agent_obstacle_score.py  debug_mppi.py  debug_trajectory_probabilities.py  debug_velocity_score.py  demo.py  experiment.py  experiment_alm.py  geometry.py  initial_paths.py  maps.py  optimize.py  optimize_langevin.py  problem.py  report.py  score_agent_obstacle.py  score_agent_obstacle_debug.py  score_boundary_integrals.py  score_box.py  score_function.py  score_kinetic_energy.py  score_mppi.py  solve.py  solve_alm.py  sweep.py  visgraphprior.py  visualize.py  visualize_maps.py
ael/archive/: projection.py
ael/pymaze/: maze.py
ael/tests/: agent_obstacle_score.py
analytical_version/: agent_obstacle_score.py  agent_obstacle_score_debug.py  kernels.ipynb  optimize.py  projection.py  projection_bak.py
analytical_version/tests/: agent_obstacle_score.py
notebooks/: debug_constraint_violations.ipynb  debug_velocity_score.ipynb  gen_instances_jinhao.ipynb  general_constrained_sampling.ipynb  kernels.ipynb  optimize_mppi.ipynb  plot_sweep.ipynb  rectangle_scores.ipynb  surface_scores.ipynb  vis_results.ipynb  visualize_largerobotmaps.ipynb
shapeoptplanning/: optimization.py  projection.py
