[project]
name = "shape-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyomo>=6.9.5",
    "pyvisgraph>=0.2.1",
    "ruff>=0.14.14",
    "scipy>=1.17.0",
    "tensordict>=0.10.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "ty>=0.0.14",
    "tyro>=1.0.5",
]

[tool.ruff]
exclude = [
    "shapeoptplanning"
]
